plugins {
	id 'matcher.common'
	id 'matcher.publishing.maven'
	id 'matcher.openrewrite.java11'
}

base {
	archivesName = 'matcher-core'
}

java {
	sourceCompatibility = JavaVersion.VERSION_11
	targetCompatibility = JavaVersion.VERSION_11

	if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11)) {
		toolchain {
			languageVersion = JavaLanguageVersion.of(11)
		}
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 11
}

dependencies {
	api project(':matcher-model')
}
